Fix post header style at low width (added wrap)

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -12,6 +12,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .Body {
@@ -39,7 +40,7 @@
 
 .LikeHeart,
 .CommentIcon {
-  font-size: 32px;
+  font-size: 24px;
   cursor: pointer;
 }
 
